# Website

./: .gitignore  .replit  Poster1.jsx  README.md  _redirects  app.py  build.py  cart.html  checkout.html  email_service.py  filmytea_wsgi.py  index.html  keep_alive.py  main.py  netlify.toml  order-success.html  poster-detail.html  posters-data.js  posters.html  posters_data.js  pyproject.toml  railway.json  render-requirements.txt  replit.md  requirements.txt  vercel.json
attached_assets/: Pasted--DOCTYPE-html-html-head-meta-charset-UTF-8-style-body-fon-1756489099455_1756489099456.txt  Pasted-The-Netlify-deploy-errored-with-the-following-guidance-provided-Diagnosis-The-build-failu-1755971817105_1755971817105.txt  Pasted-https-res-cloudinary-com-dxv6byz2q-image-upload-v1755676740-Smoking-Chills-Red-text-s93bz4-jpg-ht-1755677350382_1755677350382.txt
google-apps-script/: Code.gs  DEPLOYMENT_INSTRUCTIONS.md  cart.html  cart_js.html  checkout.html  index.html  order_success.html  poster_detail.html  posters.html  style.html
netlify/functions/: app.py  email_service.py  handler.py  requirements.txt  test.py
netlify/functions/static/: style.css
netlify/functions/templates/: base.html  dummy_payment.html  error.html  (+4 more)
static/: cart.js  mobile-fix.css  style.css
static/css/: style.css
static/js/: main.js
templates/: about.html  base.html  cart.html  category.html  checkout.html  contact.html  dummy_payment.html  email_test.html  index.html  order_preview.html  order_success.html  portfolio.html  poster_detail.html  posters.html  wallpaper_detail.html  wallpapers.html
