[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "filmytea-poster-gallery"
version = "0.1.0"
description = "Flask e-commerce poster gallery application"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "instamojo-wrapper>=1.2.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.5",
    "sendgrid>=6.12.4",
    "sqlalchemy>=2.0.43",
    "werkzeug>=3.1.3",
    "yagmail>=0.15.293",
]

[tool.setuptools]
# This is a Flask web application, not a traditional Python package
# Specify exactly what should be included to avoid confusion
py-modules = ["app", "main", "email_service"]

[tool.setuptools.packages]
# No packages to discover - this is a flat web application structure
find = {}

[tool.setuptools.package-data]
# Include templates and static files
"*" = ["templates/*", "static/*"]
